Install native libraries instead of extracting them
Also add runOnX Gradle tasks due to the grown number of JVM arguments.